link main.min.js

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <title> APRICOT MEDIA</title>
+    <meta charset="utf-8" />
+    <title>APRICOT MEDIA</title>
   </head>
   <body>
-<h1> Final Project Website</h1>
+    <h1>Final Project Website</h1>
   </body>
+  <script src="js/min/main.min.js"></script>
 </html>
