--- a/index.html
+++ b/index.html
@@ -3,9 +3,264 @@
   <head>
     <meta charset="utf-8" />
     <title>APRICOT MEDIA</title>
+    <!-- bootstrap -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <!-- css file -->
+    <link rel="stylesheet" href="css/min/main.css" />
   </head>
   <body>
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button
+            type="button"
+            class="navbar-toggle collapsed"
+            data-toggle="collapse"
+            data-target="#bs-example-navbar-collapse-1"
+            aria-expanded="false"
+          >
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Brand</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li class="active">
+              <a href="#">Link <span class="sr-only">(current)</span></a>
+            </li>
+            <li><a href="#">Link</a></li>
+            <li class="dropdown">
+              <a
+                href="#"
+                class="dropdown-toggle"
+                data-toggle="dropdown"
+                role="button"
+                aria-haspopup="true"
+                aria-expanded="false"
+                >Dropdown <span class="caret"></span
+              ></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">Separated link</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">One more separated link</a></li>
+              </ul>
+            </li>
+          </ul>
+          <form class="navbar-form navbar-left">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Search" />
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+          </form>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Link</a></li>
+            <li class="dropdown">
+              <a
+                href="#"
+                class="dropdown-toggle"
+                data-toggle="dropdown"
+                role="button"
+                aria-haspopup="true"
+                aria-expanded="false"
+                >Dropdown <span class="caret"></span
+              ></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">Separated link</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+      </div>
+      <!-- /.container-fluid -->
+    </nav>
     <h1>Final Project Website</h1>
+    <div
+      id="carouselExampleControls"
+      class="carousel slide"
+      data-ride="carousel"
+    >
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img
+            class="d-block w-100"
+            src="https://via.placeholder.com/1000x800"
+            alt="First slide"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100"
+            src="https://via.placeholder.com/1000x800"
+            alt="Second slide"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100"
+            src="https://via.placeholder.com/1000x800"
+            alt="Third slide"
+          />
+        </div>
+      </div>
+      <a
+        class="carousel-control-prev"
+        href="#carouselExampleControls"
+        role="button"
+        data-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a
+        class="carousel-control-next"
+        href="#carouselExampleControls"
+        role="button"
+        data-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+    <!-- services -->
+    <h2>Services</h2>
+    <!-- products -->
+    <h2>Products</h2>
+    <div class="cards">
+      <div class="title"></div>
+      <div class="img"></div>
+      <div class="paragraph">
+        <div class="text">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores,
+          atque?
+        </div>
+        <div class="btn"></div>
+      </div>
+    </div>
+    <div class="cards">
+      <div class="title"></div>
+      <div class="img"></div>
+      <div class="paragraph">
+        <div class="text">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores,
+          atque?
+        </div>
+        <div class="btn"></div>
+      </div>
+    </div>
+    <div class="cards">
+      <div class="title"></div>
+      <div class="img"></div>
+      <div class="paragraph">
+        <div class="text">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores,
+          atque?
+        </div>
+        <div class="btn"></div>
+      </div>
+    </div>
+    <div class="cards">
+      <div class="title"></div>
+      <div class="img"></div>
+      <div class="paragraph">
+        <div class="text">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores,
+          atque?
+        </div>
+        <div class="btn"></div>
+      </div>
+    </div>
+    <div class="cards">
+      <div class="title"></div>
+      <div class="img"></div>
+      <div class="paragraph">
+        <div class="text">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores,
+          atque?
+        </div>
+        <div class="btn"></div>
+      </div>
+    </div>
+    <!-- contact -->
+    <form action="">
+      <!-- select section -->
+      <div class="select section">
+        <div class="sub-sec">
+          <div class="name">Services</div>
+          <select>
+            <option value="volvo">A</option>
+            <option value="saab">B</option>
+            <option value="opel">C</option>
+            <option value="audi">D</option>
+            <option value="benz">E</option>
+          </select>
+        </div>
+        <div class="sub-sec">
+            <div class="name">Template</div>
+            <select>
+              <option value="volvo">A</option>
+              <option value="saab">B</option>
+              <option value="opel">C</option>
+              <option value="audi">D</option>
+              <option value="benz">E</option>
+            </select>
+          </div>
+        </div>
+      </div>
+      <!-- select section done -->
+      <div class="section input">
+        <div class="title">Name</div>
+        <input type="text" name="name" value="">
+        <div class="title">Email</div>
+        <input type="text" name="email" value="">
+        <div class="title">Phone</div>
+        <input type="text" name="phone" value="">
+        <div class="title">Comment</div>
+        <textarea rows="4" cols="">
+            </textarea>
+      </div>
+      <!-- input section done -->
+      <div class="section submit">
+        <input type="submit" value="submit">
+      </div>
+      <!-- submit section done -->
+    </form>
   </body>
+  <!-- bootstrap -->
+  <script
+    src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"
+  ></script>
+  <!-- js file -->
   <script src="js/min/main.min.js"></script>
 </html>
