--- a/index.html
+++ b/index.html
@@ -50,157 +50,189 @@
           </div>
         </nav>
     <h1>Final Project Website</h1>
-    <h2>Design Portal</h2>
-    <div
-      id="carouselExampleControls"
-      class="carousel slide"
-      data-ride="carousel"
-    >
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img
-            class="d-block w-100"
-            src="https://via.placeholder.com/1000x800"
-            alt="First slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100"
-            src="https://via.placeholder.com/1000x800"
-            alt="Second slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100"
-            src="https://via.placeholder.com/1000x800"
-            alt="Third slide"
-          />
-        </div>
-      </div>
-      <a
-        class="carousel-control-prev"
-        href="#carouselExampleControls"
-        role="button"
-        data-slide="prev"
+    <!-- Home Section -->
+    <div class="home contain">
+      <div class="divider"></div>
+      <div class="visual">
+      <h2>Design Portal</h2>
+      <div
+        id="carouselExampleControls"
+        class="carousel slide"
+        data-ride="carousel"
       >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a
-        class="carousel-control-next"
-        href="#carouselExampleControls"
-        role="button"
-        data-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-    <!-- services -->
-    <h2>Services</h2>
-    <!-- products -->
-    <h2>Products</h2>
-    <div class="cards">
-      <div class="title"></div>
-      <div class="img"></div>
-      <div class="paragraph">
-        <div class="text">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores,
-          atque?
-        </div>
-        <div class="btn"></div>
-      </div>
-    </div>
-    <div class="cards">
-      <div class="title"></div>
-      <div class="img"></div>
-      <div class="paragraph">
-        <div class="text">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores,
-          atque?
-        </div>
-        <div class="btn"></div>
-      </div>
-    </div>
-    <div class="cards">
-      <div class="title"></div>
-      <div class="img"></div>
-      <div class="paragraph">
-        <div class="text">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores,
-          atque?
-        </div>
-        <div class="btn"></div>
-      </div>
-    </div>
-    <div class="cards">
-      <div class="title"></div>
-      <div class="img"></div>
-      <div class="paragraph">
-        <div class="text">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores,
-          atque?
-        </div>
-        <div class="btn"></div>
-      </div>
-    </div>
-    <div class="cards">
-      <div class="title"></div>
-      <div class="img"></div>
-      <div class="paragraph">
-        <div class="text">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores,
-          atque?
-        </div>
-        <div class="btn"></div>
-      </div>
-    </div>
-    <!-- contact -->
-    <form action="">
-      <!-- select section -->
-      <div class="select section">
-        <div class="sub-sec">
-          <div class="name">Services</div>
-          <select>
-            <option value="volvo">A</option>
-            <option value="saab">B</option>
-            <option value="opel">C</option>
-            <option value="audi">D</option>
-            <option value="benz">E</option>
-          </select>
-        </div>
-        <div class="sub-sec">
-            <div class="name">Template</div>
-            <select>
-              <option value="volvo">A</option>
-              <option value="saab">B</option>
-              <option value="opel">C</option>
-              <option value="audi">D</option>
-              <option value="benz">E</option>
-            </select>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              class="d-block w-100"
+              src=""
+              alt="First slide"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              class="d-block w-100"
+              src=""
+              alt="Second slide"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              class="d-block w-100"
+              src=""
+              alt="Third slide"
+            />
           </div>
         </div>
+        <a
+          class="carousel-control-prev"
+          href="#carouselExampleControls"
+          role="button"
+          data-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a
+          class="carousel-control-next"
+          href="#carouselExampleControls"
+          role="button"
+          data-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
-      <!-- select section done -->
-      <div class="section input">
-        <div class="title">Name</div>
-        <input type="text" name="name" value="">
-        <div class="title">Email</div>
-        <input type="text" name="email" value="">
-        <div class="title">Phone</div>
-        <input type="text" name="phone" value="">
-        <div class="title">Comment</div>
-        <textarea rows="4" cols="">
-            </textarea>
+      <!-- visual end below -->
+    </div>
+    <!-- home end below -->
+    </div>
+    <!-- services -->
+    <div class="service contain">
+        <div class="divider"></div>
+        <div class="visual">
+      <h2>Services</h2>
+      <!-- visual end below -->
+        </div>
+      <!-- service end below -->
+    </div>
+    
+    <!-- products -->
+    <div class="product contain">
+        <div class="divider"></div>
+        <div class="visual">
+        <h2>Products</h2>
+        <div class="cards">
+          <div class="title"></div>
+          <div class="img"></div>
+          <div class="paragraph">
+            <div class="text">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores,
+              atque?
+            </div>
+            <div class="btn"></div>
+          </div>
+        </div>
+        <div class="cards">
+          <div class="title"></div>
+          <div class="img"></div>
+          <div class="paragraph">
+            <div class="text">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores,
+              atque?
+            </div>
+            <div class="btn"></div>
+          </div>
+        </div>
+        <div class="cards">
+          <div class="title"></div>
+          <div class="img"></div>
+          <div class="paragraph">
+            <div class="text">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores,
+              atque?
+            </div>
+            <div class="btn"></div>
+          </div>
+        </div>
+        <div class="cards">
+          <div class="title"></div>
+          <div class="img"></div>
+          <div class="paragraph">
+            <div class="text">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores,
+              atque?
+            </div>
+            <div class="btn"></div>
+          </div>
+        </div>
+        <div class="cards">
+          <div class="title"></div>
+          <div class="img"></div>
+          <div class="paragraph">
+            <div class="text">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores,
+              atque?
+            </div>
+            <div class="btn"></div>
+          </div>
+        </div>
+        <!-- visual end below -->
       </div>
-      <!-- input section done -->
-      <div class="section submit">
-        <input type="submit" value="submit">
-      </div>
-      <!-- submit section done -->
-    </form>
+        <!-- product end below -->
+    </div>
+    <!-- contact -->
+    <div class="contain contact">
+        <div class="divider"></div>
+        <div class="visual">
+          <h2>Contact</h2>
+        <form action="">
+            <!-- select section -->
+            <div class="select section">
+              <div class="sub-sec">
+                <div class="name">Services</div>
+                <select>
+                  <option value="volvo">A</option>
+                  <option value="saab">B</option>
+                  <option value="opel">C</option>
+                  <option value="audi">D</option>
+                  <option value="benz">E</option>
+                </select>
+              </div>
+              <div class="sub-sec">
+                  <div class="name">Template</div>
+                  <select>
+                    <option value="volvo">A</option>
+                    <option value="saab">B</option>
+                    <option value="opel">C</option>
+                    <option value="audi">D</option>
+                    <option value="benz">E</option>
+                  </select>
+                </div>
+              </div>
+            </div>
+            <!-- select section done -->
+            <div class="section input">
+              <div class="title">Name</div>
+              <input type="text" name="name" value="">
+              <div class="title">Email</div>
+              <input type="text" name="email" value="">
+              <div class="title">Phone</div>
+              <input type="text" name="phone" value="">
+              <div class="title">Comment</div>
+              <textarea rows="4" cols="">
+                  </textarea>
+            </div>
+            <!-- input section done -->
+            <div class="section submit">
+              <input type="submit" value="submit">
+            </div>
+            <!-- submit section done -->
+          </form>
+          <!-- visual end below -->
+        </div>
+          <!-- contact end below -->
+    </div>
+      <!-- footer -->
   </body>
   <!-- bootstrap -->
   <script
