--- a/index.html
+++ b/index.html
@@ -14,112 +14,125 @@
     <link rel="stylesheet" href="css/min/main.css" />
   </head>
   <body>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#"
+              >Home <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdown"
+              role="button"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              Dropdown
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">Disabled</a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input
+            class="form-control mr-sm-2"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"
+          />
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+            Search
           </button>
-        
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Dropdown
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
-              </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
-          </div>
-        </nav>
+        </form>
+      </div>
+    </nav>
     <h1>Final Project Website</h1>
     <!-- Home Section -->
     <div class="home contain">
       <div class="divider"></div>
       <div class="visual">
-      <h2>Design Portal</h2>
-      <div
-        id="carouselExampleControls"
-        class="carousel slide"
-        data-ride="carousel"
-      >
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img
-              class="d-block w-100"
-              src=""
-              alt="First slide"
-            />
+        <h2>Design Portal</h2>
+        <div
+          id="carouselExampleControls"
+          class="carousel slide"
+          data-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="" alt="First slide" />
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="" alt="Second slide" />
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="" alt="Third slide" />
+            </div>
           </div>
-          <div class="carousel-item">
-            <img
-              class="d-block w-100"
-              src=""
-              alt="Second slide"
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              class="d-block w-100"
-              src=""
-              alt="Third slide"
-            />
-          </div>
+          <a
+            class="carousel-control-prev"
+            href="#carouselExampleControls"
+            role="button"
+            data-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a
+            class="carousel-control-next"
+            href="#carouselExampleControls"
+            role="button"
+            data-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
-        <a
-          class="carousel-control-prev"
-          href="#carouselExampleControls"
-          role="button"
-          data-slide="prev"
-        >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a
-          class="carousel-control-next"
-          href="#carouselExampleControls"
-          role="button"
-          data-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
+        <!-- visual end below -->
       </div>
-      <!-- visual end below -->
-    </div>
-    <!-- home end below -->
+      <!-- home end below -->
     </div>
     <!-- services -->
     <div class="service contain">
-        <div class="divider"></div>
-        <div class="visual">
-      <h2>Services</h2>
-      <!-- visual end below -->
-        </div>
+      <div class="divider"></div>
+      <div class="visual">
+        <h2>Services</h2>
+        <!-- visual end below -->
+      </div>
       <!-- service end below -->
     </div>
-    
+
     <!-- products -->
     <div class="product contain">
-        <div class="divider"></div>
-        <div class="visual">
+      <div class="divider"></div>
+      <div class="visual">
         <h2>Products</h2>
         <div class="cards">
           <div class="title"></div>
@@ -178,61 +191,64 @@
         </div>
         <!-- visual end below -->
       </div>
-        <!-- product end below -->
+      <!-- product end below -->
     </div>
     <!-- contact -->
     <div class="contain contact">
-        <div class="divider"></div>
-        <div class="visual">
-          <h2>Contact</h2>
-        <form action="">
-            <!-- select section -->
-            <div class="select section">
-              <div class="sub-sec">
-                <div class="name">Services</div>
-                <select>
-                  <option value="volvo">A</option>
-                  <option value="saab">B</option>
-                  <option value="opel">C</option>
-                  <option value="audi">D</option>
-                  <option value="benz">E</option>
-                </select>
-              </div>
-              <div class="sub-sec">
-                  <div class="name">Template</div>
-                  <select>
-                    <option value="volvo">A</option>
-                    <option value="saab">B</option>
-                    <option value="opel">C</option>
-                    <option value="audi">D</option>
-                    <option value="benz">E</option>
-                  </select>
+      <div class="divider"></div>
+      <div class="visual">
+        <div class="change"></div>
+        <div class="con-cont">
+            <h2>Contact</h2>
+            <form action="">
+                <!-- select section -->
+                <div class="select section">
+                  <div class="sub-sec">
+                    <div class="name">Services</div>
+                    <select>
+                      <option value="volvo">A</option>
+                      <option value="saab">B</option>
+                      <option value="opel">C</option>
+                      <option value="audi">D</option>
+                      <option value="benz">E</option>
+                    </select>
+                  </div>
+                  <div class="sub-sec">
+                      <div class="name">Template</div>
+                      <select>
+                        <option value="volvo">A</option>
+                        <option value="saab">B</option>
+                        <option value="opel">C</option>
+                        <option value="audi">D</option>
+                        <option value="benz">E</option>
+                      </select>
+                    </div>
+                  </div>
                 </div>
-              </div>
-            </div>
-            <!-- select section done -->
-            <div class="section input">
-              <div class="title">Name</div>
-              <input type="text" name="name" value="">
-              <div class="title">Email</div>
-              <input type="text" name="email" value="">
-              <div class="title">Phone</div>
-              <input type="text" name="phone" value="">
-              <div class="title">Comment</div>
-              <textarea rows="4" cols="">
-                  </textarea>
-            </div>
-            <!-- input section done -->
-            <div class="section submit">
-              <input type="submit" value="submit">
-            </div>
-            <!-- submit section done -->
-          </form>
-          <!-- visual end below -->
+                <!-- select section done -->
+                <div class="section input">
+                  <div class="title">Name</div>
+                  <input type="text" name="name" value="">
+                  <div class="title">Email</div>
+                  <input type="text" name="email" value="">
+                  <div class="title">Phone</div>
+                  <input type="text" name="phone" value="">
+                  <div class="title">Comment</div>
+                  <textarea rows="4" cols="">
+                      </textarea>
+                </div>
+                <!-- input section done -->
+                <div class="section submit">
+                  <input type="submit" value="submit">
+                </div>
+                <!-- submit section done -->
+              </form>
         </div>
-          <!-- contact end below -->
+        <!-- visual end below -->
+      </div>
+      <!-- contact end below -->
     </div>
-      <!-- footer -->
+    <!-- footer -->
   </body>
   <!-- bootstrap -->
   <script
