update contact form
still need more styling

--- a/index.html
+++ b/index.html
@@ -197,58 +197,73 @@
     <div class="contain contact">
       <div class="divider"></div>
       <div class="visual">
-        <div class="change"></div>
+        <div class="change">
+          <div class="btn">
+            <div class="icon"></div>
+          </div>
+          <div class="btn">
+            <div class="icon"></div>
+          </div>
+          <div class="btn">
+            <div class="icon"></div>
+          </div>
+        </div>
         <div class="con-cont">
-            <h2>Contact</h2>
-            <form action="">
-                <!-- select section -->
-                <div class="select section">
-                  <div class="sub-sec">
-                    <div class="name">Services</div>
-                    <select>
-                      <option value="volvo">A</option>
-                      <option value="saab">B</option>
-                      <option value="opel">C</option>
-                      <option value="audi">D</option>
-                      <option value="benz">E</option>
-                    </select>
-                  </div>
-                  <div class="sub-sec">
-                      <div class="name">Template</div>
-                      <select>
-                        <option value="volvo">A</option>
-                        <option value="saab">B</option>
-                        <option value="opel">C</option>
-                        <option value="audi">D</option>
-                        <option value="benz">E</option>
-                      </select>
-                    </div>
-                  </div>
-                </div>
-                <!-- select section done -->
-                <div class="section input">
-                  <div class="title">Name</div>
-                  <input type="text" name="name" value="">
-                  <div class="title">Email</div>
-                  <input type="text" name="email" value="">
-                  <div class="title">Phone</div>
-                  <input type="text" name="phone" value="">
-                  <div class="title">Comment</div>
-                  <textarea rows="4" cols="">
-                      </textarea>
-                </div>
-                <!-- input section done -->
-                <div class="section submit">
-                  <input type="submit" value="submit">
-                </div>
-                <!-- submit section done -->
-              </form>
+          <h2>Contact</h2>
+          <form action="">
+            <div class="section select">
+              <div class="sub-sec">
+                <div class="name">Template</div>
+                <select>
+                  <option value="volvo">AAAAAA</option>
+                  <option value="saab">BBBBBB</option>
+                  <option value="opel">CCCCCC</option>
+                  <option value="audi">DDDDDD</option>
+                  <option value="benz">EEEEEE</option>
+                </select>
+              </div>
+              <div class="sub-sec">
+                <div class="name">Template</div>
+                <select>
+                  <option value="volvo">AAAAAA</option>
+                  <option value="saab">BBBBBB</option>
+                  <option value="opel">CCCCCC</option>
+                  <option value="audi">DDDDDD</option>
+                  <option value="benz">EEEEEE</option>
+                </select>
+              </div>
+            </div>
+            <!-- section select end above -->
+            <div class="section input">
+              <div class="sub-sec name">
+                <div class="title">Name</div>
+                <input type="text" name="name" value="" />
+              </div>
+              <div class="sub-sec email">
+                <div class="title">Email</div>
+                <input type="text" name="email" value="" />
+              </div>
+              <div class="sub-sec phone">
+                <div class="title">Phone</div>
+                <input type="text" name="phone" value="" />
+              </div>
+              <div class="sub-sec comment">
+                <div class="title">Comment</div>
+                <textarea name="" id="" rows="4" cols=""></textarea>
+              </div>
+            </div>
+            <!-- input section ends above -->
+            <div class="section submit">
+              <input type="submit" value="submit" />
+            </div>
+          </form>
         </div>
         <!-- visual end below -->
       </div>
       <!-- contact end below -->
     </div>
     <!-- footer -->
+    <div class="footer"></div>
   </body>
   <!-- bootstrap -->
   <script
