update contact form detail

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 </select>
               </div>
               <div class="sub-sec">
-                <div class="name">Template</div>
+                <div class="name">Service</div>
                 <select>
                   <option value="volvo">AAAAAA</option>
                   <option value="saab">BBBBBB</option>
