trying different things

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="visual">
         <h2>Products</h2>
         <div class="cards">
-          <div class="title"></div>
+          <div class="title">Bicycle Logo</div>
           <div class="img"></div>
           <div class="paragraph">
             <div class="text">
@@ -137,8 +137,14 @@
           <div class="img"></div>
           <div class="paragraph">
             <div class="text">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores,
-              atque?
+              Bianca Leadaekam is a digital artist that specializes in
+logo design. One of her latest is called “Bicycle Shop.” It
+is a distinctive design modelled after the shape and colours
+of the logos that were stamped on wooden baseball
+bats from a bygone era. It can bring the are of nostalgia
+to your brand. This quality design can be purchased for
+$89.00, which includes our standard license.
+
             </div>
             <div class="btn"></div>
           </div>
