--- a/products.html
+++ b/products.html
@@ -12,6 +12,7 @@
     />
     <!-- css file -->
     <link rel="stylesheet" href="css/min/main.css" />
+     <link rel="stylesheet" href="/" />
   </head>
   <body>
       <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -123,11 +124,13 @@
         <h2>Products</h2>
         
         <div class="cards">
-          <div class="title"></div>
-          <div class="img"></div>
+          <div class="title">Bicycle Logo</div>
+          <div class="img">
+            <img src="img/logo.jpg">
+          </div>
           <div class="paragraph">
             <div class="text">
-              Bianca Leadaekam is a digital artist that specializes in
+Bianca Leadaekam is a digital artist that specializes in
 logo design. One of her latest is called “Bicycle Shop.” It
 is a distinctive design modelled after the shape and colours
 of the logos that were stamped on wooden baseball
