restore nav style

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/min/main.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <a class="navbar-brand" href="#">Navbar</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -43,7 +43,10 @@
           
         </ul>
       </div>
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      <a class="bag" href="#">
+        <img src="/img/bag-01.png" alt="">
+      </a>
+      <!-- <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Shop</button> -->
     </nav>
   </body>
   <!-- bootstrap -->
