--- a/index.html
+++ b/index.html
@@ -121,67 +121,96 @@
         <div class="divider"></div>
         <div class="visual">
         <h2>Products</h2>
+        <!-- FIRST CARD - BIKE LOGO -->
         <div class="cards">
-          <div class="title">Bicycle Logo</div>
-          <div class="img"></div>
-          <div class="paragraph">
-            <div class="text">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores,
-              atque?
-            </div>
-            <div class="btn"></div>
-          </div>
-        </div>
-        <div class="cards">
-          <div class="title"></div>
-          <div class="img"></div>
-          <div class="paragraph">
-            <div class="text">
-              Bianca Leadaekam is a digital artist that specializes in
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="/img/logo.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Bicycle Logo</h5>
+                  <p class="card-text">
+                    Bianca Leadaekam is a digital artist that specializes in
 logo design. One of her latest is called “Bicycle Shop.” It
 is a distinctive design modelled after the shape and colours
 of the logos that were stamped on wooden baseball
 bats from a bygone era. It can bring the are of nostalgia
 to your brand. This quality design can be purchased for
-$89.00, which includes our standard license.
+$89.00, which includes our standard license.</p>
+                  <a href="#" class="btn btn-primary">BUY</a>
+                </div>
+              </div>
 
-            </div>
-            <div class="btn"></div>
-          </div>
-        </div>
-        <div class="cards">
-          <div class="title"></div>
-          <div class="img"></div>
-          <div class="paragraph">
-            <div class="text">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores,
-              atque?
-            </div>
-            <div class="btn"></div>
-          </div>
-        </div>
-        <div class="cards">
-          <div class="title"></div>
-          <div class="img"></div>
-          <div class="paragraph">
-            <div class="text">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores,
-              atque?
-            </div>
-            <div class="btn"></div>
-          </div>
-        </div>
-        <div class="cards">
-          <div class="title"></div>
-          <div class="img"></div>
-          <div class="paragraph">
-            <div class="text">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores,
-              atque?
-            </div>
-            <div class="btn"></div>
-          </div>
-        </div>
+            <!-- SECOND CARD -->
+              <div class="cards">
+                  <div class="card" style="width: 18rem;">
+                      <img class="card-img-top" src="/img/cv_template-01.png" alt="Card image cap">
+                      <div class="card-body">
+                        <h5 class="card-title">Resume Template</h5>
+                        <p class="card-text">
+                            Sarah Emuser is a digital artist that specializes in developing
+                          brands and representative products. She has developed
+                            unique resume templates that will grab the attention
+                            of potential empoloyers. This quality design can be
+                            purchased for $49.00, which includes our standard
+                            license.
+                        </p>
+                        <a href="#" class="btn btn-primary">BUY</a>
+                      </div>
+                    </div>
+
+              <!-- THIRD CARD -->
+                    <div class="cards">
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="/img/business_card_template-01.png" alt="Card image cap">
+                            <div class="card-body">
+                              <h5 class="card-title">Business Cards</h5>
+                              <p class="card-text">
+                                Antonio Bogoli is a digital artist that specializes in design
+                                  of paper products. He will ensure that your colour
+                                  scheme and design matches your brand This quality
+                                  design can be purchased for $49.00, which includes our
+                                  standard license.</p>
+                              <a href="#" class="btn btn-primary">BUY</a>
+                            </div>
+                          </div>
+
+                <!-- FOURTH CARD -->
+                          <div class="cards">
+                              <div class="card" style="width: 18rem;">
+                                  <img class="card-img-top" src="/img/graphic_art.jpg" alt="Card image cap">
+                                  <div class="card-body">
+                                    <h5 class="card-title">Graphic Art</h5>
+                                    <p class="card-text">
+                                        Penelope Tracipher is a digital artist. She creates stunning
+                                        fine art prints. Her work is well suited for offices and
+                                        homes. Much of her work can evoke specific feelings of
+                                        calm and peace. This particular piece can be purchased
+                                        for $99.00.
+                                    </p>
+                                    <a href="#" class="btn btn-primary">BUY</a>
+                                  </div>
+                                </div>
+
+                <!-- FIFTH CARD -->
+                                <div class="cards">
+                                    <div class="card" style="width: 18rem;">
+                                        <img class="card-img-top" src="/img/website_template-01.png" alt="Card image cap">
+                                        <div class="card-body">
+                                          <h5 class="card-title">Website Themes</h5>
+                                          <p class="card-text">Tamara Semethites is a digital expert that has created a
+                                              variety of materials for the web. One of her creations is a
+                                              set of web site designs that can meet the needs of a variety
+                                              of potential specific client. This versatile product can
+                                              be purchased for $99.</p>
+                                          <a href="#" class="btn btn-primary">BUY</a>
+                                        </div>
+                                      </div>
+
+
+              
+        
+
+
+
         <!-- visual end below -->
       </div>
         <!-- product end below -->
