--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-        
+
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
@@ -111,11 +111,40 @@
         <div class="divider"></div>
         <div class="visual">
       <h2>Services</h2>
+      <div class="contai">
+        <div class="row no-gutters">
+          <div class="col-md one">
+          <h1>LOGOS</h1>
+          </div>
+          <div class="col-md two">
+            <h1>WEB</h1>
+          </div>
+          <div class="col-md three">
+            <h1>CARD</h1>
+          </div>
+          <div class="col-md four">
+            <h1>BRAND</h1>
+          </div>
+          <div class="col-md-6">
+                <div class="image1">
+
+          <img class="col" src="images\F7FDA338.jpg" alt=""><br />
+          <h1>APP DEVELOPMENT</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <b class="bold">Price : 1200$</b><span><b class="bold">Estimated completion time : 14 Days</b></span>
+      <br>  <button type="button" onclick="alert('Added to cart')">BUY</button>
+
+  </div>
+          </div>
+        </div>
+      </div>
+
+
       <!-- visual end below -->
         </div>
       <!-- service end below -->
     </div>
-    
+
     <!-- products -->
     <div class="product contain">
         <div class="divider"></div>
@@ -233,6 +262,16 @@
           <!-- contact end below -->
     </div>
       <!-- footer -->
+      <footer class="w-100">
+        <div class="car w-25 h-50 card" >
+  <img src="images\nnn.png" class="card-img-top" alt="...">
+  <div class="card-body">
+  <h4 class="car-text">  copyrighted by Paul, Carla, Nelvin, Tim</h4></div>
+</div>
+<div class="card-body">
+
+
+      </footer>
   </body>
   <!-- bootstrap -->
   <script
