update nav position

--- a/index.html
+++ b/index.html
@@ -34,18 +34,13 @@
           <li class="nav-item active">
             <a class="nav-link" href="#">Contact</a>
           </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#">
-              <img src="/img/bag-01.png" alt="">
-            </a>
-          </li>
-          
-          
         </ul>
       </div>
-      <a class="bag" href="#">
+      <div class="bag">
+        <a href="#">
         <img src="/img/bag-01.png" alt="">
       </a>
+    </div>
       <!-- <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Shop</button> -->
     </nav>
   </body>
