adjusting media queries

--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@
         <div class="divider"></div>
         <div class="visual">
         <h2>Products</h2>
+        <div class="pro-mob"></div>
+        <div class="pro-desk"></div>
         <!-- FIRST CARD - BIKE LOGO -->
         
         <div class="accordion" id="accordionExample" >
@@ -430,6 +432,11 @@ $89.00, which includes our standard license.</p>
           <!-- contact end below -->
     </div>
       <!-- footer -->
+      <div class="test-area">
+        <div class="mobile-test">Mobile show</div>
+      <div class="desktop-test">Desktop show</div>
+    </div>
+      
   </body>
   <!-- bootstrap -->
   <script
