Revert "made changes to product"
This reverts commit e493fe0a42bd2da62633cc28bf5dad961abd5b4a.

--- a/products.html
+++ b/products.html
@@ -2,8 +2,12 @@
     <!-- products --> 
         
           <h2>Products</h2>
-     <!-- Accordian Start  -->
+        <div class="pro-mob"></div>
+        <div class="pro-desk"></div>
+
+       <!-- Accordian Start  -->
         <!-- FIRST CARD - BIKE LOGO -->
+
         <div class="accordion" id="accordionExample" >
           <div class="card" >
             <div class="card-header" id="headingOne">
@@ -24,7 +28,7 @@
                 <h5 class="card-title">Bicycle Logo</h5>
 
                 <p class="card-text">
-Bianca Leadaekam is a digital artist that specializes in
+                  Bianca Leadaekam is a digital artist that specializes in
 logo design. One of her latest is called “Bicycle Shop.” It
 is a distinctive design modelled after the shape and colours
 of the logos that were stamped on wooden baseball
@@ -95,6 +99,7 @@ $89.00, which includes our standard license.</p>
               <a href="#" class="btn btn-primary">BUY</a>
             </div>
           </div>
+
     </div>
   </div>
 </div>
@@ -130,6 +135,7 @@ $89.00, which includes our standard license.</p>
               <a href="#" class="btn btn-primary">BUY</a>
             </div>
           </div>
+
     </div>
   </div>
 </div>
@@ -159,12 +165,15 @@ $89.00, which includes our standard license.</p>
               <a href="#" class="btn btn-primary">BUY</a>
             </div>
           </div>
+
+
     </div>
   </div>
 </div>
 </div>
-</div>
+
 <!-- Accordian End -->
+
 
 <!-- This is the end of the mobile view -->
 
