--- a/contact.html
+++ b/contact.html
@@ -109,8 +109,46 @@
               ></iframe>
             </div>
           </div>
-          <div class="info">Visit our Office Now.</div>
+          <div class="info"><span>Visit our Office Now.</span></div>
         </div>
+        <!-- visual end below -->
+      </div>
+      <!-- contact end below -->
+    </div>
+
+    <!-- contact 3 -->
+    <div class="contain contact">
+      <div class="divider"></div>
+      <div class="visual">
+        <div class="change">
+          <div class="btn">
+            <div class="icon"></div>
+          </div>
+          <div class="btn">
+            <div class="icon"></div>
+          </div>
+          <div class="btn">
+            <div class="icon"></div>
+          </div>
+        </div>
+        <div class="con-cont">
+          <h2>Contact</h2>
+          <h3>Contact Us By Different Ways Below</h3>
+          <div class="con-msg">
+            <span>
+              Office Number: (613)-123-1234
+          </span>
+        </div>
+          <div class="con-msg">
+            <span>
+              Office Email:apricotmedia@algonquincollege.com
+          </span>
+        </div>
+          <div class="social-media">
+            <div class="icon"></div>
+            <div class="icon"></div>
+            <div class="icon"></div>
+          </div>
         <!-- visual end below -->
       </div>
       <!-- contact end below -->
