updated index and product file - test

--- a/products.html
+++ b/products.html
@@ -1,9 +1,6 @@
 <!-- products -->
 
-<h2>Products</h2>
-<div class="pro-mob"></div>
-<div class="pro-desk"></div>
-
+<h2>Really Great Products</h2>
 <!-- Accordian Start  -->
 <!-- FIRST CARD - BIKE LOGO -->
 
