added grid to the desktop view

--- a/products.html
+++ b/products.html
@@ -1,4 +1,4 @@
-<h2>Amazing Products</h2>
+<h2>Products</h2>
 <!-- Accordian Start  -->
 <!-- FIRST CARD - BIKE LOGO -->
 
@@ -26,7 +26,7 @@
       data-parent="#accordionExample"
     >
       <div class="card-body">
-        <div class="cards">
+        <div class="containercards">
           <div class="card" style="width: 18rem;">
             <img
               class="card-img-top"
@@ -74,7 +74,7 @@
         data-parent="#accordionExample"
       >
         <div class="card-body">
-          <div class="cards">
+          <div class="containercards">
             <div class="card" style="width: 18rem;">
               <img
                 class="card-img-top"
@@ -121,7 +121,7 @@
           data-parent="#accordionExample"
         >
           <div class="card-body">
-            <div class="cards">
+            <div class="containercards">
               <div class="card" style="width: 18rem;">
                 <img
                   class="card-img-top"
@@ -169,7 +169,7 @@
           data-parent="#accordionExample"
         >
           <div class="card-body">
-            <div class="cards">
+            <div class="containercards">
               <div class="card" style="width: 18rem;">
                 <img
                   class="card-img-top"
@@ -216,7 +216,7 @@
           data-parent="#accordionExample"
         >
           <div class="card-body">
-            <div class="cards">
+            <div class="containercards">
               <div class="card" style="width: 18rem;">
                 <img
                   class="card-img-top"
@@ -239,20 +239,26 @@
           </div>
         </div>
       </div>
-
+    </div>
+  </div>
+</div>
       <!-- Accordian End -->
 
       <!-- This is the end of the mobile view -->
 
       <!-- starting the desktop view -->
 
-      <div class="cards">
+      <div class="containercards">
+
+          <div class="row align-items-center">
+              <div class="col">
+
         <div class="card" style="width: 18rem;">
           <img class="card-img-top" src="/img/logo.jpg" alt="Card image cap" />
           <div class="card-body">
             <h5 class="card-title">Bicycle Logo</h5>
 
-            <p class="card-text">
+            <!-- <p class="card-text">
               Bianca Leadaekam is a digital artist that specializes in logo
               design. One of her latest is called “Bicycle Shop.” It is a
               distinctive design modelled after the shape and colours of the
@@ -261,8 +267,11 @@
               design can be purchased for $89.00, which includes our standard
               license.
             </p>
-            <a href="#" class="btn btn-primary">BUY</a>
+            <a href="#" class="btn btn-primary">BUY</a> -->
           </div>
+
+<!-- Blank Card -->
+          <div class="cardgap"></div>
 
           <!-- SECOND CARD -->
 
@@ -274,19 +283,23 @@
             />
             <div class="card-body">
               <h5 class="card-title">Resume Template</h5>
-              <p class="card-text">
+              <!-- <p class="card-text">
                 Sarah Emuser is a digital artist that specializes in developing
                 brands and representative products. She has developed unique
                 resume templates that will grab the attention of potential
                 empoloyers. This quality design can be purchased for $49.00,
                 which includes our standard license.
               </p>
-              <a href="#" class="btn btn-primary">BUY</a>
+              <a href="#" class="btn btn-primary">BUY</a> -->
             </div>
           </div>
 
+        </div>
+      </div>
+
           <!-- THIRD CARD -->
-          <div class="cards">
+          <div class="col-6">
+
             <div class="card" style="width: 18rem;">
               <img
                 class="card-img-top"
@@ -305,9 +318,11 @@
               </div>
             </div>
 
-            <!-- FOURTH CARD -->
+          </div>
 
-            <div class="cards">
+            <!-- FOURTH CARD -->
+            <div class="col">
+
               <div class="card" style="width: 18rem;">
                 <img
                   class="card-img-top"
@@ -316,20 +331,26 @@
                 />
                 <div class="card-body">
                   <h5 class="card-title">Graphic Art</h5>
-                  <p class="card-text">
+                  <!-- <p class="card-text">
                     Penelope Tracipher is a digital artist. She creates stunning
                     fine art prints. Her work is well suited for offices and
                     homes. Much of her work can evoke specific feelings of calm
                     and peace. This particular piece can be purchased for
                     $99.00.
                   </p>
-                  <a href="#" class="btn btn-primary">BUY</a>
+                  <a href="#" class="btn btn-primary">BUY</a> -->
                 </div>
               </div>
 
+
+
               <!-- FIFTH CARD -->
-              <div class="cards">
+           
                 <div class="card" style="width: 18rem;">
+
+                  <!-- Blank Card -->
+<div class="cardgap"></div>
+
                   <img
                     class="card-img-top"
                     src="/img/website_template-01.png"
@@ -337,21 +358,19 @@
                   />
                   <div class="card-body">
                     <h5 class="card-title">Website Themes</h5>
-                    <p class="card-text">
+                    <!-- <p class="card-text">
                       Tamara Semethites is a digital expert that has created a
                       variety of materials for the web. One of her creations is
                       a set of web site designs that can meet the needs of a
                       variety of potential specific client. This versatile
                       product can be purchased for $99.
                     </p>
-                    <a href="#" class="btn btn-primary">BUY</a>
+                    <a href="#" class="btn btn-primary">BUY</a> -->
                   </div>
                 </div>
               </div>
             </div>
+
           </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+   
+
