fixed the media breaks

--- a/products.html
+++ b/products.html
@@ -258,8 +258,8 @@
           
 
 <!-- First Card -->
-          <div class="container">
-              <div class="card-body">
+          <!-- <div class="container"> -->
+              <div class="card-body first mb-2">
                   <img class="card-img-top" src="/img/logo.jpg" alt="Card image cap" />
                  <!-- Button to Open the Modal -->
               <div class="card-body"> <button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#myModal">
@@ -303,7 +303,7 @@
                   </div>
                 </div>
               </div>
-            </div> 
+            <!-- </div>  -->
             </div>
  
               </div>
@@ -394,7 +394,7 @@
                   src="/img/graphic_art.jpg"
                   alt="Card image cap"
                 />
-                <div class="card-body">
+                <div class="card-body mb-2">
                     <button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#myModal4">
                         Graphic Art
                       </button>
