changed the spacing of the modal cards

--- a/products.html
+++ b/products.html
@@ -173,7 +173,7 @@
               <div class="card" style="width: 18rem;">
                 <img
                   class="card-img-top"
-                  src="/img/graphic_art.jpg"
+                  src="/img/graphic_art2.jpg"
                   alt="Card image cap"
                 />
                 <div class="card-body">
@@ -259,10 +259,10 @@
 
 <!-- First Card -->
           <!-- <div class="container"> -->
-              <div class="card-body first mb-2">
+              <!-- <div class="card-body first mb-2"> -->
                   <img class="card-img-top" src="/img/logo.jpg" alt="Card image cap" />
                  <!-- Button to Open the Modal -->
-              <div class="card-body"> <button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#myModal">
+              <div class="card-body mb-2"> <button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#myModal">
                 Bicycle Logo
               </button>
             
@@ -306,7 +306,7 @@
             <!-- </div>  -->
             </div>
  
-              </div>
+              <!-- </div> -->
 
           <!-- SECOND CARD -->
 
@@ -391,7 +391,7 @@
               <div class="card" style="width: 18rem;">
                 <img
                   class="card-img-top"
-                  src="/img/graphic_art.jpg"
+                  src="/img/graphic_art2.jpg"
                   alt="Card image cap"
                 />
                 <div class="card-body mb-2">
@@ -412,7 +412,7 @@
           <!-- Modal body -->
           <div class="modal-body">
               <div class="card" style="width: 18rem;">
-                  <img class="card-img-top" src="/img/graphic_art.jpg" alt="Card image cap" />
+                  <img class="card-img-top" src="/img/graphic_art2.jpg" alt="Card image cap" />
                   
               <p>
                   Penelope Tracipher is a digital artist. She creates stunning
