re input product in index.html

--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
       </div>
       <!-- home end below -->
     </div>
+    <!-- Product Section -->
+    <div class="product contain">
+      <div class="divider"></div>
+      <div class="visual" id="productHtml">
+        <!-- visual end below -->
+      </div>
+      <!-- home end below -->
+    </div>
     <script
       src="https://code.jquery.com/jquery-4.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
