--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         <!-- visual end below -->
       </div>
       <!-- product end below -->
+    </div>
       <!-- contact -->
       <div class="contain contact">
         <div class="divider"></div>
