--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
       </div>
       <!-- home end below -->
     </div>
+    <div class="service contain">
+      <div class="divider"></div>
+      <div class="visual">
+        <h2>Service</h2>
+        <!-- visual end below -->
+      </div>
+      <!-- service end below -->
+    </div>
     <!-- Product Section -->
     <div class="product contain">
       <div class="divider"></div>
