--- a/contact/info.html
+++ b/contact/info.html
@@ -1,4 +1,4 @@
-<h2>Contact</h2>
+<!-- <h2>Contact</h2> -->
 <div class="info-space">
   <div class="intro"><span>Contact Us Via Different Ways</span></div>
   <div class="content ways">
@@ -10,9 +10,9 @@
   <div class="intro"><span>Or Follow Us on Social Media</span></div>
   <div class="content">
     <div class="social">
-      <div class="icon"></div>
-      <div class="icon"></div>
-      <div class="icon"></div>
+      <div class="icon ig"></div>
+      <div class="icon fb"></div>
+      <div class="icon tw"></div>
     </div>
   </div>
 </div>
