--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#"
+            <a class="nav-link" href="#homeScroll"
               >Home <span class="sr-only">(current)</span></a
             >
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#">Services</a>
+            <a class="nav-link" href="#serviceScroll">Services</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#">Products</a>
+            <a class="nav-link" href="#productScroll">Products</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="#contactScroll">Contact</a>
           </li>
         </ul>
       </div>
@@ -73,14 +73,14 @@
     </div>
     <!-- main -->
     <!-- Home Section -->
-    <div class="home contain">
+    <div class="home contain" id="homeScroll">
       <div class="divider"></div>
       <div class="visual" id="homeSec">
         <!-- visual end below -->
       </div>
       <!-- home end below -->
     </div>
-    <div class="service contain">
+    <div class="service contain" id="serviceScroll">
       <div class="divider"></div>
       <div class="visual">
         <h2>Service</h2>
@@ -89,15 +89,16 @@
       <!-- service end below -->
     </div>
     <!-- Product Section -->
-    <div class="product contain">
+    <div class="product contain" id="productScroll">
       <div class="divider"></div>
       <div class="visual" id="productHtml">
+
         <!-- visual end below -->
       </div>
       <!-- product end below -->
     </div>
       <!-- contact -->
-      <div class="contain contact">
+      <div class="contain contact" id="contactScroll">
         <div class="divider"></div>
         <div class="visual">
           <div class="change">
@@ -122,7 +123,7 @@
         <!-- contact end below -->
       </div>
       <!-- footer -->
-      <div class="footer"></div>
+      <div class="footer">Copyright:2019 Apricot Media</div>
     </div>
     <script
       src="https://code.jquery.com/jquery-4.3.1.slim.min.js"
