--- a/home.html
+++ b/home.html
@@ -82,14 +82,10 @@
     <div class="about">
       <h3>Welcome!</h3>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus provident
-        eos nemo necessitatibus, molestiae quasi quaerat voluptatum! Sunt porro
-        odio fugiat, atque totam reiciendis esse vel mollitia eveniet
-        consequatur at! <br />
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus provident
-        eos nemo necessitatibus, molestiae quasi quaerat voluptatum! Sunt porro
-        odio fugiat, atque totam reiciendis esse vel mollitia eveniet
-        consequatur at!
+        The Student Design Portal is student-based creative agency that is all about meeting your needs. Students from a variety of design programs at Algonquin College work hard to produce affordable digital solutions, branding strategies and web design since. Our students are highly creative and are eager to explore new ideas (and challenges!) to your vision become a reality.
+
+ <br />
+        We invite you to take a look at our services and products on offer. We provide a range of services from basic business card design to full web-site development. We are constantly updating these services in order to give you the most comprehensive menu.  
       </p>
       <img src="/img/swoosh.png" alt="" />
     </div>
